force-app/main/default/objects/Pricing__c/Pricing__c.object-meta.xml
<CustomObject>
    <pluralLabel>Pricings</pluralLabel>
    <fullName>Pricing__c</fullName>
    <description>Pricings Data</description>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <type>Text</type>
        <label>Pricing Name</label>
    </nameField>
    <label>Pricing</label>
</CustomObject>