force-app/main/default/objects/Pricing__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <type>Lookup</type>
    <description>Component Lookup</description>
    <inlineHelpText>Component Lookup</inlineHelpText>
    <label>Component</label>
    <referenceTo>Component__c</referenceTo>
    <relationshipLabel>Pricings</relationshipLabel>
    <relationshipName>Pricings</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>