force-app/main/default/objects/Pricing__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <type>Lookup</type>
    <description>Price Lookup</description>
    <inlineHelpText>Price Lookp</inlineHelpText>
    <label>Price</label>
    <referenceTo>Pricing__c</referenceTo>
    <relationshipLabel>Pricings</relationshipLabel>
    <relationshipName>Pricings</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>