force-app/main/default/objects/Pricing__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <type>Lookup</type>
    <description>Product Lookup</description>
    <inlineHelpText>Product Lookup</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Pricings</relationshipLabel>
    <relationshipName>Pricings</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>